# data-commons-brasil

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  dockercmd.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: main.yml
DataSUS/: Dockerfile
DataSUS/src/: main.py
data_processor/: __main__.py  main.py
data_tools/: __main__.py  main.py
data_tools/data_processor/: __init__.py  common.py  config_formatter.py  csv_formatter.py  data_extractor.py  main.py
data_tools/downloaders/ibge-sidra/: main.py
data_tools/downloaders/ipea/: ipea.py
datatools/: __main__.py  main.py
datatools/downloaders/: downloaders.py
datatools/downloaders/datasus/: Dockerfile  __init__.py  datasus.py  http_client.py  openapi.py  parser.py  progress_tracker.py  types.py
datatools/downloaders/ibge/: agregados.py  localidades.py
datatools/downloaders/ipea/: ipea.py
datatools/importer/: __main__.py  main.py
datatools/privacy/: attacks.py  datasus_datasets_info.json
datatools/processor/: __init__.py  config_formatter.py  data_extractor.py  gpt_interface.py  main.py  processor.py
datatools/processor/ipea/: common.py  config_formatter.py  csv_formatter.py  data_extractor.py  ipea.py
datatools/processor/utils/: config.json  merge_json.py  process_csvs.py  remove_empty_id_csvs.py  remove_nulls.py  rename_csvs.py
deploy/nginx/: default.conf  nginx.conf
downloaders/datasus/: main.py
downloaders/datasus/src/: main.py
downloaders/ibge-api/: agregados.py  aux.py  dump-frequencia-pesquisas.json  dump-nomes.json  maregrafia.py  metadados-pesquisas.py  nomes.py
downloaders/ibge-api/helpers/: parsing-metereologia.ipynb  remove-nans-meteorologia.py
downloaders/ibge-dados-abertos/ibge/: README.md  ibge-dados-abertos.py
downloaders/ibge-sidra/: aux.py  main.py
downloaders/ibge_api/: ibge.py
downloaders/ipea/: ipea.py
(+30 files in other folders)
