[project]
name = "data-commons-brasil"
version = "0.1.0"
description = "Processador de dados DC Brasil"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "attrs==23.1.0",
    "automat==22.10.0",
    "beautifulsoup4==4.12.2",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "constantly==23.10.4",
    "cryptography==41.0.7",
    "cssselect==1.2.0",
    "distro==1.9.0",
    "filelock==3.13.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "hyperlink==21.0.0",
    "idna==3.6",
    "incremental==22.10.0",
    "ipeadatapy==0.1.9",
    "itemadapter==0.8.0",
    "itemloaders==1.1.0",
    "jiter==0.5.0",
    "jmespath==1.0.1",
    "json5>=0.12.1",
    "lxml==4.9.4",
    "numpy==1.26.2",
    "openai==1.51.0",
    "packaging==23.2",
    "pandas==2.1.4",
    "parsel==1.8.1",
    "polars==1.9.0",
    "protego==0.3.0",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydispatcher==2.0.7",
    "pyopenssl==23.3.0",
    "pypydispatcher==2.1.2 ; platform_python_implementation == 'PyPy'",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "queuelib==1.6.2",
    "ratelimit>=2.2.1",
    "requests==2.31.0",
    "requests-file==1.5.1",
    "scrapy==2.11.0",
    "service-identity==23.1.0",
    "setuptools==79.0.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tldextract==5.1.1",
    "tqdm==4.66.5",
    "twisted==22.10.0",
    "twisted-iocpsupport==1.0.4 ; sys_platform == 'win32'",
    "typing-extensions==4.12.2",
    "tzdata==2023.3",
    "urllib3==2.1.0",
    "w3lib==2.1.2",
    "zope-interface==6.1",
]

[tool.ruff]
exclude = ["website"]
